# Projeto-Ranking-de-Lojas

./: .env base  codigo.py  passo_a_passo.md  pyproject.toml
