[project]
name = "projeto-ranking-de-lojas"
version = "0.1.0"
description = ""
authors = [
    {name = "André Luis Quiosi"}
]
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "yagmail (>=0.15.293,<0.16.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "tabulate (>=0.9.0,<0.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
